# DynamicEngine3D

./: CMakeLists.txt  Collisions.cpp  Constants.h  Constraint.cs  ConstraintData.cs  Deformer.cpp  Deformer.cs  DesignerEditor.cs  EngineTypes.h  LICENSE  Linker.cs  Material Preset.cs  MathUtils.h  Nodes.cs  README.md  SoftBody.cs  SoftBodyEditor.cs  Solver.cs  Truss.cs  Types.cs  World.cs
Assets/: ConstraintData.cs  Link.cs  Material Preset.cs  Truss.cs
Converter/: Converter.cs
Core/: Deformer.cs  MeshDeformer.cs  NodeManager.cs  Nodes.cs  Solver.cs  World.cs
Cube/: Soft-Body Cube.prefab
Cube/Truss/: Pin_Cube.asset
Cylinder/Material/: Cylinder.mat
Cylinder/Truss/: Cylinder Truss.asset  Cylinder Truss.json
DE3D/Assets/: Matter.cs  Truss.cs
DE3D/Converter/: Converter.cs  TxTruss.cs
DE3D/Core/: Collisions.cs  Constants.cs  Deformer.cs  Helpers.cs  Nodes.cs  Solver.cs
DE3D/Editor/: CamControllerEditor.cs  CarControllerEditor.cs  ConstraintEditor.cs  DesignerEditor.cs  SceneSettingsEditor.cs  SoftBodyEditor.cs  TrussEditor.cs
DE3D/Runtime/: CamController.cs  CarController.cs  Constraint.cs  Designer.cs  RedCar.cs  SceneSettings.cs  SoftBody.cs  StaticBody.cs
DynamicEngine/: Core.cs  Properties.cs  SceneSettings.cs  SoftBody.cs  Truss.cs  TrussDesigner.cs
Editor/: CameraVisualizerControllerEditor.cs  ConstraintEditor.cs  Designer.cs  DesignerEditor.cs  NodeGrabberEditor.cs  SoftBodyEditor.cs  TrussDesignerEditor.cs  TrussEditor.cs
Kirov/Materials/: L05_Glass.mat  L05_Wheel.mat
Kirov/Truss/: Car_Wheel constrained.asset  Car_Wheel.json
Lada/: Vostok Relia.prefab
Lada/Truss/: Car_Frame._converted.asset
Physics Engine/Assets/: Matter.cs  Truss.cs
Runtime/: CamController.cs  Constraint.cs  NodeGrabber.cs  SceneSettings.cs  SoftBody.cs  TrussDesigner.cs  World.cs
Sphere/: Sphere.prefab
Trusses/: Cube.asset
cpp/: Collisions.cpp  SoftBodyInstance.cpp  Solver.cpp
h/: Constants.h  SoftBodyInstance.h
include/: Constants.h  EngineTypes.h  MathUtils.h  RigidBodyInstance.h  SoftBodyInstance.h
src/: Collisions.cpp  Deformer.cpp  RigidBodyInstance.cpp  SoftBodyInstance.cpp  Solver.cpp
(+112 files in other folders)
